--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "express": "^4.17.3"
   }
 }
