--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "source-map-support": "^0.5.21",
+    "tslint": "^6.1.3",
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "debug": "^4.3.4",
+    "express": "^4.17.3",
+    "express-winston": "^4.2.0",
+    "winston": "^3.6.0"
   }
 }
